// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly when background is disabled 1`] = `
.c0 {
  background: #f4f4f4;
  color: white;
  cursor: pointer;
  text-align: center;
  box-shadow: 0px 2px 2px rgba(0,0,0,0.1);
  padding: 10px;
  border-radius: 4px;
  width: 100%;
  border: none;
  font-size: 1em;
  font-weight: bold;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`Button renders correctly when background is not disabled 1`] = `
.c0 {
  background: #0eb5d1;
  color: white;
  cursor: pointer;
  text-align: center;
  box-shadow: 0px 2px 2px rgba(0,0,0,0.1);
  padding: 10px;
  border-radius: 4px;
  width: 100%;
  border: none;
  font-size: 1em;
  font-weight: bold;
}

<button
  className="c0"
  disabled={false}
/>
`;
